--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "element-ui": "^2.4.6",
+    "mockjs": "^1.0.1-beta3",
     "qs": "^6.5.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
+    "vue-cookie": "^1.1.4",
     "vue-infinite-scroll": "^2.0.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
