--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.6",
     "mockjs": "^1.0.1-beta3",
+    "moment": "^2.22.2",
     "qs": "^6.5.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
     "vue-cookie": "^1.1.4",
+    "vue-croppa": "^1.3.8",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
