--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "vue-axios": "^2.1.3",
     "vue-cookie": "^1.1.4",
     "vue-croppa": "^1.3.8",
+    "vue-cropper": "^0.4.4",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
