--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "dns": "^0.2.2",
+    "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.6",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
@@ -21,6 +23,7 @@
     "vue-croppa": "^1.3.8",
     "vue-cropper": "^0.4.4",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
